Updated references for sysD
**  Re-pointed /etc/init.d  references to /usr/lib/systemd/systemd-*  to work with 6/7/7.x
** Added url for net-install
** Added netinstall and upgrade options in %pre

--- a/secure-kickstart.cfg
+++ b/secure-kickstart.cfg
@@ -1,21 +1,19 @@
 #
 # From: Jim Perrin <jperrin@gmail.com>
-#
+# Updated for RHEL 7 / CentOS 7  with addition of netinstall
 ############## Secure Kickstart version 1.0 ##############
 ##########################################################
 #
 # Name: secure-kickstart.cfg
 # Description: Kickstart file with many of the DISA STIG
 #	       changes applied via %post functionality
-# Distro: CentOS 5 or RHEL 5
+# Distro: CentOS 5-7 or RHEL 5-7 
 # 
-#
 #################### End User Notes ######################
 #
 #   There are a number of considerations to be made when 
 # using this document. Partitioning space, system use, 
 # and other tasks that make servers different.
-#
 #
 ####################### Usage ############################
 #
@@ -26,11 +24,15 @@
 #     from. Change this to suit your needs.
 
 install
+#upgrade 
 cdrom
+#netinstall
 #url --url http://192.168.1.1./installmedia
+#url --url http://{mirror-of-choice}/pub/CentOS/7.1.1503/os/x86_64/  ## mirror list available @ http://centos.org/download/mirrors
 lang en_US.UTF-8
 keyboard us
 network --noipv6 --onboot=yes --bootproto=dhcp 
+
 #text
 ########## !! CHANGE THIS !! ##########
 #zerombr
@@ -105,8 +107,8 @@ cp /etc/resolv.conf /mnt/sysimage/etc/resolv.conf
 
 if [ -f /usr/share/rhn/RPM-GPG-KEY ]; then
   rpm --import /usr/share/rhn/RPM-GPG-KEY 
-elif [ -f /etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-5 ]; then
-  rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-5
+elif [ -f /etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-5 ]; then  ## replace with Centos 5/6/7.x / RHEL 5/6/7.x
+  rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-5 ## replace to match line above
 fi
 
 ############# Adding Security Enhancements ############################
@@ -118,8 +120,8 @@ fi
 # GEN000060 (G003)
 # Require root password for single user mode
 echo "Locking down GEN000020, GEN000040, GEN000060"
-echo "Require the root pw when booting into single user mode" >> /etc/inittab
-echo "~~:S:wait:/sbin/sulogin" >> /etc/inittab
+echo "Require the root pw when booting into single user mode" >> /usr/lib/systemd/systemd-initctl
+echo "~~:S:wait:/sbin/sulogin" >> /usr/lib/systemd/systemd-initctl
 echo "GEN000020, GEN000040,GEN000060 Complete"
 
 
@@ -129,7 +131,7 @@ echo "Interactive Boot disabled"
 
 # LNX00580 (L222)
 echo "Locking down LNX00580"
-perl -npe 's/ca::ctrlaltdel:\/sbin\/shutdown/#ca::ctrlaltdel:\/sbin\/shutdown/' -i /etc/inittab
+perl -npe 's/ca::ctrlaltdel:\/sbin\/shutdown/#ca::ctrlaltdel:\/sbin\/shutdown/' -i /usr/lib/systemd/systemd-initctl
 echo "LNX00580 Complete"
 
 
@@ -170,7 +172,7 @@ echo "Done"
 ###### PAM Modifications
 # These modifications apply to GEN000460, GEN000600 and GEN000620
 touch /var/log/tallylog
-
+# for Centos 7.1 may need to create /etc/pam.d/system-auth-local as well
 cat << 'EOF' > /etc/pam.d/system-auth-local
 #%PAM-1.0
 # Auth Section
