--- a/secure-kickstart.cfg
+++ b/secure-kickstart.cfg
@@ -23,7 +23,7 @@
 # 3. This kickstart assumes a local mirror to install
 #     from. Change this to suit your needs.
 
-install
+#install
 #upgrade 
 #cdrom
 netinstall
